Changelog
=========

2.13.5 (unreleased)
-------------------

- Nothing changed yet.


2.13.4 (2025-04-28)
-------------------

- Fix getting global request in zopectl command.
  [buchi]


2.13.3 (2024-10-14)
-------------------

- Fix becoming the system user in zopectl command in Docker deployments.
  [buchi]

- Fix finding Plone sites in zopectl command in Docker deployments.
  [buchi]


2.13.2 (2024-04-04)
-------------------

- Fix argument parsing of zopectl command if run with Zope2.Startup.zopectl.
  [buchi]


2.13.1 (2023-06-20)
-------------------

- Log warning when a search is performed without specifying fl.
  [njohner]

- Fix solr sync maintenance command not committing all batches.
  [lgraf]


2.13.0 (2023-04-11)
-------------------

- Add support for Plone 5.2 and Python 3.
  [buchi]

- Add Python 3.8 and up compatibility.
  [mathias.leimgruber]


2.12.1 (2022-08-03)
-------------------

- Make updates_in_post_commit_enabled() helper more robust. [lgraf]


2.12.0 (2022-07-19)
-------------------

- Add option to also check allowedRolesAndUsers when determining items not up to date in Solr. [njohner]
- Add option to execute update commands in post commit hook. [njohner]


2.11.0 (2022-07-04)
-------------------

- Add support for language specific fields. [buchi]


2.10.0 (2021-09-21)
-------------------

- Add flag to force clearing solr even when solr is not enabled. [njohner]


2.9.5 (2021-08-17)
------------------

- Add unrestricted_search method. [njohner]


2.9.4 (2021-07-29)
------------------

- SolrDocument returns None for existing fields with missing value. [njohner]


2.9.3 (2021-04-22)
------------------

- Fix indexing of SearchableText only for objects with primary field. [njohner]

2.9.2 (2021-01-13)
------------------

- Do not ignore None values when indexing data in solr. [njohner]


2.9.1 (2020-12-15)
------------------

- Cleanup extract_commands before sending them to solr. [njohner]


2.9.0 (2020-08-04)
------------------
