@@ -7,3 +7,5 @@ test-extras = tests,cindexing
 
 [versions]
 mock = 3.0.5
+lxml = 4.9.4
+psutil = <7
