@@ -6,3 +6,5 @@ package-name = ftw.solr
 
 [versions]
 importlib-metadata =0.23
+lxml = 4.9.4
+psutil = <7
